# DIscord-Bot

./: .gitignore  LICENSE  README.md  constants.py  main.py  mcv_notify.py  meme.py  pyproject.toml  view.py  web_scrapping.py
assets/: jobs.csv
