[tool.poetry]
name = "repl_python3_DiscordBotDemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
discord = "^2.2.3"
replit = "^3.2.4"
youtube_dl = "^2021.12.17"
APScheduler = "^3.8.1"
qrcode = "^7.3.1"
bs4 = "^0.0.1"
pandas = "^1.5.2"
opencv-python = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
